--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -1,35 +1,37 @@
-name: Generate Snake
-
+name: Generate git commit snake animation
 on:
+  # run automatically every 24 hours
   schedule:
-    # Runs at 12am UTC
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  # This runs at midnight UTC every day
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
-
+  
+  # run on every push on the main branch
+  push:
+    branches:
+    - main
+    
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    
     steps:
-      # Checks repo under $GITHUB_WORKSHOP
-      - uses: actions/checkout@v2
-      
-      # Generates the snake
-      - uses: Platane/snk@master
-        id: snake-gif
+      # Generates a snake game from a github user contributions graph
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
-          gif_out_path: dist/github-contribution-grid-snake.gif
-      
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Push the content to the output branch
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
